src/index.css
body {
    background: url('/img/nathan-anderson-235539-unsplash.jpg');
    background-size: cover;
    margin: 0px;
}

#d3-wrapper {
    width: 500px;
    margin: 0 auto 0 auto;
    max-width: 800px;
}

#d3-wrapper svg {
    margin-top: 20px;
}

svg {
    background: white;
    opacity: 0.75;
    box-shadow: 0px 0px 5px 1px black;
    border: 1px solid;
}

.title {
    text-align: center;
    position: relative;
    left: 15px;
    top: 15px;
    z-index: 1;
    margin-bottom: 10px;
}

.unsplash, .unsplash a, .unsplash:visited {
    text-align: center;
    color: white;
    width: 360px;
    margin: 10px auto;
}

.tooltip-value {
    float: right;
    margin-left: 10px;
    font-weight: 500;
}

.chart-subtitle {
    margin-bottom: 20px;
}

/* Axis styles */
.y-axis line,
.x-axis line {
    stroke: #ccc;
}

.y-axis path,
.x-axis path {
    stroke: #666;
}

.y-axis text,
.x-axis text {
    fill: #333;
    font-size: 12px;
}

text {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
}

a, .kohokohdat {
    color: #2196F3;
    text-decoration: underline;
}

.kohokohdat {
  text-decoration: underline;
  cursor: pointer;
}

dialog > span {
  float: right;
}

dialog > a {
  color: black;
  text-decoration: none;
  outline: none;
}

